--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./assets/styles/styles.scss">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,121 +25,201 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 </head>
 
 <body>
     <div class="div">
-        <section class="header">
+        <section class="header" id="Features">
             <div class="header__tabs">
-                <img class="header__logo" src="./img/logo.png" alt="">
-                <a class="header__point">FEATURES</a>
-                <a class="header__point">WORKS</a>
-                <a class="header__point">OUR TEAM</a>
-                <a class="header__point">TESTIMONIALS</a>
-                <a class="header__point">DOWNLOAD</a>
+                <img class="header__logo" src="./assets/images/logo.png" alt="">
+                <a class="header__point" href="#Features">FEATURES</a>
+                <a class="header__point" href="#Works">WORKS</a>
+                <a class="header__point" href="#Out Team">OUR TEAM</a>
+                <a class="header__point" href="#Testimonials">TESTIMONIALS</a>
+                <a class="header__point" href="#Download">DOWNLOAD</a>
             </div>
             <div class="header__form">
                 <h3 class="header__subtitle">YOUR FAVORITE ONE PAGE MULTI PURPOSE TEMPLATE</h3>
-                <p class="header__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</p>
+                <p class="header__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo
+                    cursus magna vel scelerisque nisl consectetur et.</p>
             </div>
             <div class="header__button">
                 <button>FIND OUT MORE</button>
             </div>
         </section>
-        <section class="quality">
+        <section class="quality" id="Works">
             <div class="quality__point">
-            <img src="./img/icon_1.png">
-            <h4>EASILY CUSTOMISED</h4>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                <img src="./assets/images/icon_1.png">
+                <h4>EASILY CUSTOMISED</h4>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                    ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
             </div>
             <div class="quality__point">
-            <img src="./img/icon_2.png">
+                <img src="./assets/images/icon_2.png"">
             <h4>RESPONSIVE READY</h4>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
             </div>
-            <div class="quality__point">
-            <img src="./img/icon_3.png">
+            <div class=" quality__point">
+                <img src="./assets/images/icon_3.png"">
             <h4>MODERN DESIGN</h4>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
             </div>
-            <div class="quality__point">
-            <img src="./img/icon_4.png">
+            <div class=" quality__point">
+                <img src="./assets/images/icon_4.png"">
             <h4>CLEAN CODE</h4>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-            </div class="quality__point">
-            <div class="quality__point">
-            <img src="./img/icon_5.png">
-            <h4>Ready to Ship</h4>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-            </div>
-            <div class="quality__point">
-            <img src="./img/icon_6.png">
+            </div class=" quality__point">
+                <div class="quality__point">
+                    <img src="./assets/images/icon_5.png">
+                    <h4>Ready to Ship</h4>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                        ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                </div>
+                <div class="quality__point">
+                    <img src="./assets/images/icon_6.png"">
             <h4>DOWNLOAD FOR FREE</h4>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
             </div>
         </section>
-        <section class="WORK">
-            <img class="work__img" src="./img/work_1.png">
-            <img class="work__img" src="./img/work_2.png">
-            <img class="work__img"  src="./img/work_3.png">
-            <img class="work__img"  src="./img/work_4.png">
-            <img class="work__img"  src="./img/work_5.png">
-            <img class="work__img"  src="./img/work_6.png">
-            <img class="work__img"  src="./img/work_7.png">
-            <img class="work__img"  src="./img/work_8.png">
+        <section class=" WORK" id="Out Team">
+                    <img class="work__img" src="./assets/images/work_1.png">
+                    <img class="work__img" src="./assets/images/work_2.png">
+                    <img class="work__img" src="./assets/images/work_3.png">
+                    <img class="work__img" src="./assets/images/work_4.png">
+                    <img class="work__img" src="./assets/images/work_5.png">
+                    <img class="work__img" src="./assets/images/work_6.png">
+                    <img class="work__img" src="./assets/images/work_7.png">
+                    <img class="work__img" src="assets/images/work_8.png">
+                    <div class="blackout">
+                        <h4>PROJECT NAME</h4>
+                        <p>User Interface Design</p>
+                    </div>
         </section>
         <section class="reviews">
             <div class="reviews__text">
-                <img src="./img/Rectangle 24.png">
+                <img src="./assets/images/Rectangle 24.png">
                 <h4>Ruth woods</h4>
                 <p class="description">FOUNDER, CEO</p>
-                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-                <img src="./img/facebook_icon.png" alt="">
-                <img src="./img/twitter_icon.png" alt="">
-                <img src="./img/linkedin_icon.png" alt="">
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+                    amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget
+                    urna mollis ornare vel eu leo.</p>
+                <img src="./assets/images/facebook_icon.png" alt="">
+                <img src="./assets/images/twitter_icon.png" alt="">
+                <img src="./assets/images/linkedin_icon.png" alt="">
             </div>
             <div class="reviews__text">
-                <img src="./img/Rectangle 25.png">
+                <img src="./assets/images/Rectangle 25.png">
                 <h4>Timothy Reed</h4>
                 <p class="description">CO-FOUNDER, DEVELOPER</p>
-                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-                <img src="./img/facebook_icon.png" alt="">
-                <img src="./img/twitter_icon.png" alt="">
-                <img src="./img/linkedin_icon.png" alt="">
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+                    amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget
+                    urna mollis ornare vel eu leo.</p>
+                <img src="./assets/images/facebook_icon.png" alt="">
+                <img src="./assets/images/twitter_icon.png" alt="">
+                <img src="./assets/images/linkedin_icon.png" alt="">
             </div>
             <div class="reviews__text">
-                <img src="./img/Rectangle 26.png">
+                <img src="./assets/images/Rectangle 26.png">
                 <h4>Victoria Vladez</h4>
                 <p class="description">UI DESIGNER</p>
-                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-                <img src="./img/facebook_icon.png" alt="">
-                <img src="./img/twitter_icon.png" alt="">
-                <img src="./img/linkedin_icon.png" alt="">
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+                    amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget
+                    urna mollis ornare vel eu leo.</p>
+                <img src="./assets/images/facebook_icon.png" alt="">
+                <img src="./assets/images/twitter_icon.png" alt="">
+                <img src="./assets/images/linkedin_icon.png" alt="">
             </div>
             <div class="reviews__text">
-                <img src="./img/Rectangle 27 .png">
+                <img src="./assets/images/Rectangle 27 .png">
                 <h4>Beverly Little</h4>
                 <p class="description">DATA SCIENTIST</p>
-                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-                <img src="./img/facebook_icon.png" alt="">
-                <img src="./img/twitter_icon.png" alt="">
-                <img src="./img/linkedin_icon.png" alt="">
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+                    amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget
+                    urna mollis ornare vel eu leo.</p>
+                <img src="./assets/images/facebook_icon.png" alt="">
+                <img src="./assets/images/twitter_icon.png" alt="">
+                <img src="./assets/images/linkedin_icon.png" alt="">
             </div>
         </section>
-        <section class="testimonials">
-            <div>
-                <img src="./img/bg.png" alt="">
+        <section class="single-item" id="Testimonials">
+            <div class="" id="img_1">
+                <div class="testimonials">
+                    <div class="">
+                        <img src="./assets/images/bg.png" alt="">
+                    </div>
+                    <div class="testimonials__text">
+                        <h3 class="testimonials__texts">“Integer posuere erat a ante venenatis dapibus posuere velit
+                            aliquet. Donec sed odio dui. Aenean eu leo quam...”</h3>
+                        <p class="testimonials__texts">Susan Sims, Interaction Designer at XYZ</p>
+                    </div>
+                </div>
             </div>
-            <div class="testimonials__text">
-                <h3 class="testimonials__texts">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</h3>
-                <p class="testimonials__texts">Susan Sims, Interaction Designer at XYZ</p>
+            <div class="" id="img_2">
+                <div class="testimonials">
+                    <div class="">
+                        <img src="./assets/images/bg.png" alt="">
+                    </div>
+                    <div class="testimonials__text">
+                        <h3 class="testimonials__texts">“Integer posuere erat a ante venenatis dapibus posuere velit
+                            aliquet. Donec sed odio dui. Aenean eu leo quam...”</h3>
+                        <p class="testimonials__texts">Susan Sims, Interaction Designer at XYZ</p>
+                    </div>
+                </div>
+            </div>
+            <div class="" id="img_3">
+                <div class="testimonials">
+                    <div class="">
+                        <img src="./assets/images/bg.png" alt="">
+                    </div>
+                    <div class="testimonials__text">
+                        <h3 class="testimonials__texts">“Integer posuere erat a ante venenatis dapibus posuere velit
+                            aliquet. Donec sed odio dui. Aenean eu leo quam...”</h3>
+                        <p class="testimonials__texts">Susan Sims, Interaction Designer at XYZ</p>
+                    </div>
+                </div>
+
             </div>
         </section>
-        <section class="DOWNLOAD">
-            <h4>Are You Ready to Start? Download Now For Free!</h4>
+        <section>
+            <ul class="scroll">
+                <button href="#img_1"></button>
+                <button href="#img_2"></button>
+                <button href="#img_3"></button>
+            </ul>
+        </section>
+        <section class="DOWNLOAD" id="Download">
+            <h2>Are You Ready to Start? Download Now For Free!</h2>
             <p>Fusce dapibus, tellus ac cursus commodo</p>
             <button>DOWNLOAD HERE</button>
         </section>
-    </div>
-</body> 
+        <section class="copyright ">
+            <div class="footer__item">
+                <h3>LOCATION</h3>
+                <p>3481 Melrose Place Beverly Hills, CA 90210</p>
+            </div>
+            <div class="footer__item">
+                <h3>SHARE WITH LOVE</h3>
+                <div class="footer__img">
+                    <img src="./assets/images/facebook_icon.png" alt="">
+                    <img src="./assets/images/twitter_icon.png" alt="">
+                    <img src="./assets/images/linkedin_icon.png" alt="">
+                </div>
+            </div>
+            <div class="footer__item">
+                <h3>ABOUT ACTIVEBOX</h3>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor
+                    fringilla.</p>
+            </div>
+        </section>
+        <section class="footer">
+            <div class="footer__text">
+                <p>Copyright © 2015 ActiveBox. All Rights Reserved Made with by Kamal Chaneman</p>
+            </div>
+        </section>
+</body>
+<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="./assets/js/script.js"></script>
+
 </html>
